# sfm-pruebas

./: AlgoritmoMultiplesImagenes  SFM.ipynb  feature.py  main.py  monumento.pcd  pr1.pcd  prueba.pcd  reconstruccion3D.ipynb  reconstruccion3D.py  vista.py
sfmCpp/: CMakeCache.txt  CMakeLists.txt  Common.cpp  FindCameraMatrices.cpp  Makefile  MultiCameraDistance.cpp  MultiCameraPnP.cpp  Reconstruccion3D  Visualization.cpp  cmake_install.cmake  monumento.pcd  pointcloud.pcd  reconstruccion3D.cpp
